# aegis

./: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.ts
scripts/: release.ps1
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  biometric.rs  clipboard.rs  crypto.rs  db.rs  error.rs  hibp.rs  keystore.rs  lib.rs  main.rs  vault.rs
src/components/: EntryDialog.tsx  PasswordGenerator.tsx  SearchBar.tsx  StrengthMeter.tsx  UpdatePanel.tsx
src/components/ui/: sonner.tsx
src/lib/: format.ts  ipc.ts  strength.ts  updater.ts  windowsHello.ts
src/screens/: AuthScreen.tsx  VaultScreen.tsx
src/store/: authStore.ts  uiStore.ts  vaultStore.ts
