[package]
name = "aegis"
version = "0.1.5"
description = "A local-only secure desktop password manager"
authors = ["Aegis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aegis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = { version = "0.10", features = ["std"] }
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled-sqlcipher"] }
sha1 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security_Cryptography"
] }

